HSEARCH-4950 Update tests to be compatible with JDK 11